--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wk_editTable",
   "version": "1.0.0",
-  "description": "",
+  "description": "wk_editTable",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
