--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "svr": "gulp svr",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack -d --watch"
   },
   "repository": {
     "type": "git",
