--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^3.3.7",
+    "css-loader": "^0.28.7",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "gulp-webserver": "^0.9.1",
-    "vue": "^2.5.10",
+    "vue": "^2.5.11",
+    "vue-loader": "^13.5.0",
+    "vue-template-compiler": "^2.5.11",
     "webpack": "^3.10.0"
   }
 }
