--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "gulp-webserver": "^0.9.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "vue": "^2.5.11",
     "vue-loader": "^13.5.0",
+    "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.11",
     "webpack": "^3.10.0"
   }
