--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0",
     "gulp-webserver": "^0.9.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
     "vue": "^2.5.11",
     "vue-loader": "^13.5.0",
     "vue-style-loader": "^3.0.3",
