--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-loader": "^13.5.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.11",
+    "vuex": "^3.0.1",
     "webpack": "^3.10.0"
   }
 }
