--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "wk_editTable",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack -d --watch"
+    "build": "webpack-cli",
+    "watch": "webpack-cli -d --watch",
+    "serve": "php -S localhost:7070 -t dist"
   },
   "repository": {
     "type": "git",
@@ -15,25 +16,26 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "axios": "^0.17.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "bootstrap": "^3.3.7",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "axios": "^0.18.0",
+    "babel-loader": "^8.0.4",
+    "bootstrap": "^4.1.3",
     "bootstrap-sass": "^3.3.7",
-    "css-loader": "^0.28.11",
+    "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.19.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "vue": "^2.5.16",
-    "vue-loader": "^13.5.0",
-    "vue-style-loader": "^3.0.3",
+    "vue-loader": "^15.4.2",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1",
-    "webpack": "^3.12.0"
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   }
 }
