--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
-    "bootstrap-sass": "^3.3.7",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^2.0.0",
@@ -37,5 +36,9 @@
     "vuex": "^3.0.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.4"
   }
 }
